# cyan

./: .eslintignore  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/src/: lib.rs  main.rs
crates/app/src/state/: mod.rs
crates/app/ui/: package.json  pnpm-lock.yaml  svelte.config.js
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/client/: mod.rs
crates/lib/src/error/: mod.rs
crates/lib/src/helpers/: mod.rs
crates/lib/src/relay/: mod.rs
crates/lib/src/subscription/: mod.rs
crates/lib/src/types/: mod.rs
crates/lib/src/types/event/: custom_serde.rs  mod.rs  serde_custom.rs
crates/lib/src/types/event/kind/: mod.rs
crates/lib/src/types/event/tag/: mod.rs
crates/lib/src/types/kind/: mod.rs  serde_custom.rs
crates/lib/src/types/message/: custom_serde.rs  mod.rs  serde.rs  serde_custom.rs
crates/lib/src/types/message/filter/: mod.rs  traits.rs
crates/lib/src/types/tag/: mod.rs  serde_custom.rs
crates/lib/tests/: helpers.rs  test.rs  test_event.rs  test_message.rs
media/logo/: info.txt
