[workspace]
members = ["crates/*"]
default-members = ["crates/app"]

[workspace.package]
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
repository = "https://github.com/jonassterud/cyan"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.67"

[workspace.dependencies]
tokio = { version = "1.29" }
anyhow = { version = "1.0" }
