[workspace]
members = ["crates/*"]
default-members = ["crates/app"]

[workspace.package]
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
repository = "https://github.com/jonassterud/cyan"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.67"

[workspace.dependencies]
tokio = { version = "1.29" }
serde = { version = "1.0" }
serde_with = { version = "3.3.0" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
secp256k1 = { version = "0.27.0" }
arrayref = { version = "0.3" }
hex = { version = "0.4.3" }
