[workspace]
members = ["crates/*"]
default-members = ["crates/app"]

[workspace.package]
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
repository = "https://github.com/jonassterud/cyan"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.67"

[workspace.dependencies]
rand = "0.8"
tokio = "1.29"
tokio-tungstenite = "0.20.0"
serde = "1.0"
serde_with = "3.3.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
secp256k1 = "0.27.0"
arrayref = "0.3"
hex = "0.4.3"
