[package]
name = "cyan_lib"
description = "Nostr social media client (library) - Android / iOS / Linux / macOS / Windows"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
anyhow = { workspace = true, features = [] }
thiserror = { workspace = true, features = [] }
secp256k1 = { workspace = true, features = ["serde", "rand-std", "bitcoin-hashes-std"] }
arrayref = { workspace = true, features = [] }
hex = { workspace = true, features = [] }
